<?xml version="1.0" encoding="utf-8"?>

<com.lz.base.view.LzScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_status_dc"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="状态"
                android:scaleType="centerInside"
                android:src="@mipmap/status_normal" />

            <TextView
                android:id="@+id/tv_title_dc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="32sp" />

            <View
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/transparent" />

        </LinearLayout>

        <View style="@style/Test_data_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="@string/test_infomation"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="28sp" />

        <View style="@style/Test_data_view" />

        <LinearLayout style="@style/Test_data_parent">

            <TextView
                style="@style/Test_Data"
                android:text="@string/currentBusVoltage" />

            <TextView
                android:id="@+id/tv_current_bus_voltage_dc"
                style="@style/Test_Data_Value" />

        </LinearLayout>

        <View style="@style/Test_data_view_content" />

        <LinearLayout style="@style/Test_data_parent">

            <TextView
                style="@style/Test_Data"
                android:text="@string/currentVoltageSet" />

            <TextView
                android:id="@+id/tv_current_voltage_set_dc"
                style="@style/Test_Data_Value" />

        </LinearLayout>
        <View style="@style/Test_data_view_content" />

        <LinearLayout style="@style/Test_data_parent">

            <TextView
                style="@style/Test_Data"
                android:text="@string/currentChargingCurrent" />

            <TextView
                android:id="@+id/tv_current_charging_current_dc"
                style="@style/Test_Data_Value" />

        </LinearLayout>

        <View style="@style/Test_data_view_content" />

        <LinearLayout style="@style/Test_data_parent">

            <TextView
                style="@style/Test_Data"
                android:text="@string/currentChargingTime" />

            <TextView
                android:id="@+id/tv_current_charging_time_dc"
                style="@style/Test_Data_Value" />

        </LinearLayout>

        <View style="@style/Test_data_view_content" />

        <LinearLayout style="@style/Test_data_parent">


            <TextView
                style="@style/Test_Data"
                android:text="@string/currentFillingCapacity" />

            <TextView
                android:id="@+id/tv_current_filling_capacity_dc"
                style="@style/Test_Data_Value" />

        </LinearLayout>

        <View style="@style/Test_data_view" />

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent" />

    </LinearLayout>

</com.lz.base.view.LzScrollView>
