<?xml version="1.0" encoding="utf-8"?>
<com.lz.base.view.LzScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_status"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="状态"
                android:scaleType="centerInside"
                android:src="@mipmap/status_normal" />

            <TextView
                android:id="@+id/tv_title_cd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="32sp" />

            <View
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <View style="@style/Test_data_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="终止条件"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="28sp" />

        <View style="@style/Test_data_view" />

        <LinearLayout style="@style/Test_data_parent">

            <TextView
                style="@style/Test_Data"
                android:text="@string/tv_032D_jc" />

            <TextView
                android:id="@+id/tv_charging_capacity_cd"
                style="@style/Test_Data_Value" />

        </LinearLayout>

        <View style="@style/Test_data_view_content" />

        <LinearLayout style="@style/Test_data_parent">

            <TextView
                style="@style/Test_Data"
                android:text="@string/tv_032e_jc" />

            <TextView
                android:id="@+id/tv_charging_time_cd"
                style="@style/Test_Data_Value" />

        </LinearLayout>

        <View style="@style/Test_data_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:text="测试信息"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="28sp" />

        <View style="@style/Test_data_view" />

        <LinearLayout style="@style/Test_data_parent">

            <TextView
                style="@style/Test_Data"
                android:text="@string/tv_033b_jc" />

            <TextView
                android:id="@+id/tv_current_voltage_set_cd"
                style="@style/Test_Data_Value" />

        </LinearLayout>

        <View style="@style/Test_data_view_content" />

        <LinearLayout style="@style/Test_data_parent">

            <TextView
                style="@style/Test_Data"
                android:text="@string/tv_033c_jc" />

            <TextView
                android:id="@+id/tv_current_charging_current_cd"
                style="@style/Test_Data_Value" />

        </LinearLayout>

        <View style="@style/Test_data_view_content" />

        <LinearLayout style="@style/Test_data_parent">

            <TextView
                style="@style/Test_Data"
                android:text="@string/tv_033d_jc" />

            <TextView
                android:id="@+id/tv_current_filling_capacity_cd"
                style="@style/Test_Data_Value" />

        </LinearLayout>

        <View style="@style/Test_data_view_content" />

        <LinearLayout style="@style/Test_data_parent">

            <TextView
                style="@style/Test_Data"
                android:text="@string/tv_033e_jc" />

            <TextView
                android:id="@+id/tv_current_charging_time_cd"
                style="@style/Test_Data_Value" />

        </LinearLayout>

        <View style="@style/Test_data_view_content" />

        <LinearLayout style="@style/Test_data_parent">

            <TextView
                style="@style/Test_Data"
                android:text="@string/tv_034e_jc" />

            <TextView
                android:id="@+id/tv_waring_cd"
                style="@style/Test_Data_Value" />

        </LinearLayout>

        <View style="@style/Test_data_view" />

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent" />
    </LinearLayout>

</com.lz.base.view.LzScrollView>
